# prosense-sensors

./: README.md  doover_config.json  pyproject.toml
.github/workflows/: build-image.yml
scripts/: commission_sensor.py  commission_sensor_remote.sh
simulators/: app_config.json  docker-compose.yml
simulators/sample/: main.py  pyproject.toml
src/prosense_sensors/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  prosense_driver.py
tests/: test_driver.py  test_imports.py
