[project]
name = "prosense-sensors"
version = "0.1.0"
description = "Doover device driver for ProSense (H-Link) Modbus RTU sensors — temperature first, with the wider range scaffolded."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.4.2",
]

[project.scripts]
doover-app-run = "prosense_sensors:main"
export-config = "prosense_sensors.app_config:export"
export-ui = "prosense_sensors.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
